--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,6 +58,25 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  removeTransition = (e) => {
+    if (e.propertyName !== 'transform') return //skip if it is not transform
+    e.target.classList.remove('playing')
+  }
+
+  playSound = (e) => {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`)
+    if (!audio) return //to stop the function
+    audio.currentTime = 0 
+    audio.play()
+    key.classList.add('playing')
+  }
+  
+  const keys = document.querySelectorAll('.key')
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition))
+  
+  
+  window.addEventListener('keydown', playSound)
 
 </script>
 
